--- a/index.html
+++ b/index.html
@@ -5,12 +5,33 @@
 <title>zach_html</title>
 </head>
 <h1>zach vacation photos</h1>
-<body></body>
-<h2>zach on the beach 2021</h2>
+<body>{background-color: off-white;}this proably doesn't work the way I want it to
+<h2 style="color:red;">zach on the beach 2021</h2>
 <img src="images/20210424_124824.jpg" alt="zachonbeach.jpg" width="600" height="800">
 <h2>trip to universal studios florida july 2021</h2>
 <img src="images/450.jpg" alt="universalstudeiosflorida.jpg" width="500" height="800">
-<h2>zach at the south padre island birding and nature center 2022</h2>
+<h2 style="color:yellow;">zach at the south padre island birding and nature center 2022</h2>
 <img src="images/20220409_110952.jpg" alt="zach.jpg" width="600" height="906">
-<h3>there is nothing here</h3>
+<a herf="https://www.w3schools.com/"> there is a link here </a>
+<table>
+  table, th, td {
+  border: 1px solid black;
+}
+	<tr>
+    <th>this</th>
+    <th>is</th>
+    <th>table</th>
+  </tr>
+  <tr>
+    <td>info</td>
+    <td>info</td>
+    <td>info</td>
+  </tr>
+  <tr>
+    <td>info</td>
+    <td>info</td>
+	  <td>info</td>	
+	</tr>
+</table>
+</body>
 </html>
