--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <h1>zach vacation photos</h1>
 <body>{background-color: off-white;}this proably doesn't work the way I want it to
+.style{background-color white class isn't doing anything either id caused a problem,leaving it out}
+	<ol><li>Zach on beach</li> <li>Trip to universal studios florida July 2021</li> <li>Zach at the south padre island birding and nature center 2022</li></ol>
 <h2 style="color:red;">zach on the beach 2021</h2>
 <img src="images/20210424_124824.jpg" alt="zachonbeach.jpg" width="600" height="800">
 <h2>trip to universal studios florida july 2021</h2>
@@ -20,7 +22,7 @@
 	<tr>
     <th>this</th>
     <th>is</th>
-    <th>table</th>
+    <th>table with an attempted border </th>
   </tr>
   <tr>
     <td>info</td>
