--- a/Zach's Lego Site.html
+++ b/Zach's Lego Site.html
@@ -5,7 +5,13 @@
 <title>Zach's Lego Site</title>
 <link href="css1.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
+<div id="css1">
+<header>Zach's Lego Site</header>
+<nav></nav>
+<article class="left"></article>
+<article class="right"></article>
+<footer>thanks for visiting my site</footer>	
+</div> 
 </body>
 </html>
