--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 <link href="css1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
- <div id="css1">
+ <div class="container">
  <header>Zach's Lego Site</header>
  <nav></nav>
+ <section></section>
  <article class="left"></article>
  <article class="right"></article>
- <footer>thanks for visiting my site</footer>	
+ <article class="right"></article>
+<footer>thanks for visiting my site</footer>	
  </div> 
 </body>
 </html>
