--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
  <header>Zach's Lego Site</header>
  <nav></nav>
  <section></section>
+ <form action="">
+ <div>
+ <label for="name">name
+ <input type="text" name="name" id="name" required>	 
+ </label>
+ </div>	 
+ <div>
+ <label for="email">email
+ <input type="email" name="email" id="email" required>	 
+ </label>
+ </div>
+ <div>
+ <label for="password">password
+ <input type="password" name="password" id="password" required>	 
+ </label>
+ </div>
+ <button type="submit">Submit</button>	 
+ </form>	 
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/fNcJuPIZ2WE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ <link href="https://fonts.googleapis.com/css?family=Anonymous Pro" rel="stylesheet">
+<style>
+body {
+    font-family: 'Anonymous Pro';font-size: 22px;}
+</style>
+<h1>Anonymous Pro</h1>
  <article class="left"></article>
  <article class="right"></article>
  <article class="right"></article>
